src/objects/crms11__Client_Volume_Pricing__c.object
<CustomObject>
    <description>FlexPricer Client Volume Pricing object to manage data relating to client volume pricing.</description>
    <fields>
        <fullName>crms11__Client_Price__c</fullName>
        <label>Client Price</label>
        <referenceTo>crms11__Client_Pricing__c</referenceTo>
        <relationshipName>Client_Volume_Pricings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>crms11__Client_Volume_Price__c</fullName>
        <formula>IF( (crms11__Fixed_Volume_Rate__c &lt;= 0 ), (crms11__Client_Price__r.crms11__Client_Price__c  *  crms11__Minimum_Quantity__c  *  crms11__Discount_Percentage__c), crms11__Fixed_Volume_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Volume Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>crms11__Discount_Percentage__c</fullName>
        <label>Discount Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>crms11__Fixed_Volume_Rate__c</fullName>
        <label>Fixed Volume Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>crms11__Minimum_Quantity__c</fullName>
        <label>Minimum Quantity</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Client Volume Price</label>
    <nameField>
        <displayFormat>CVP-{000000000}</displayFormat>
        <label>Client Volume Pricing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Volume Prices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>crms11__Apply_one_Pricing_at_a_time</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(crms11__Fixed_Volume_Rate__c)), NOT(ISBLANK(crms11__Discount_Percentage__c)))</errorConditionFormula>
        <errorMessage>You may only enter one of Fixed Volume Price or Discount Percentage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>crms11__At_least_one_Pricing_should_be_enable</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK( crms11__Fixed_Volume_Rate__c ), ISBLANK( crms11__Discount_Percentage__c ))</errorConditionFormula>
        <errorMessage>You must enter either a Fixed Volume Price or a Discount Percentage.</errorMessage>
    </validationRules>
</CustomObject>